--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@types/express": "^5.0.3",
+    "eslint": "^9.28.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.5.0",
     "tsx": "^4.19.4",
